adding a little documentation, clean up

--- a/attenuating_atten166_10dbm.ipynb
+++ b/attenuating_atten166_10dbm.ipynb
@@ -15,6 +15,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d05637a",
+   "metadata": {},
+   "source": [
+    "# Attenuating After Scanning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d164880",
+   "metadata": {},
+   "source": [
+    "If you forgot to attenuate the signal in the spectrum analyzer like I did, then you can attenuate it here, just by adding 10 to the amplitude."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "e106efa0",
